# BMSTU-Modeling

./: .gitignore
lab2_1/: pseudorandom_numbers_generator.ui
lab2_1/code/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h  main_window.cpp  main_window.h  prepare_initial_table_for_digits_table.py  pseudorandom_numbers_generator.ui  ui_mainwindow.h
lab2_1/data/: one_digit_nums.txt  standard_normal_distribution_quantiles.txt  the_only_table_i_could_find.txt  three_digit_nums.txt  two_digit_nums.txt
lab2_1/report/: report.tex
lab2_1/report/chapters/: preambula.tex  title.tex
lab2_2/code/: CMakeLists.txt  Gauss_Zeidel_solver.cpp  Gauss_Zeidel_solver.h  Markov_chain_calculator.cpp  Markov_chain_calculator.h  lab.ui  main.cpp  main_window.cpp  main_window.h  ui_main_window.h
lab2_2/report/chapters/: content.tex  title.tex
lab2_3/lab/: lab.sln
lab2_3/lab/lab/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest  lab.csproj
lab2_3/report/: report.tex
lab2_3/report/chapters/: content.tex  title.tex
lab2_4/lab2_4/: build.xml
lab2_4/lab2_4/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
lab2_4/lab2_4/src/: EventType.java  ExponentialDistributionRandom.java  InvalidPoissonDistributionLambdaParameterException.java  MainFrame.form  MainFrame.java  SimulationEvent.java  Simulator.java  UniformDistributionRandom.java
lab2_4/report/chapters/: content.tex  preambula.tex  (+1 more)
lab2_5/lab2_5/: build.xml
lab2_6/lab2_6/: build.xml
lab_1/: lab.ipynb  main.jl
lab_2/: main.jl
lab_3/: lab.f90  math.md  params.txt
(+50 files in other folders)
